# rope

./: CMakeLists.txt  build.sh
include/: rope.hpp
src/: main.cpp  rope.cpp
test/: CMakeLists.txt  test_text.txt  tests.cpp
